# FalloutNV-No-Registry-Patch

./: CMakeLists.txt  GalaxyWrp.def  LICENSE  LICENSE.txt  NoRegPatch.c  NoRegPatch.cpp  README.md  version.rc
minhook/: README.txt
